--- a/covid_data/index.html
+++ b/covid_data/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id = 'us_total_cases'></div>
+    <div id = 'us_total_deaths'></div>
     <div id = 'us_new_cases'></div>
-    <div id = 'state_total_cases'></div>
-    <div id = 'state_new_cases'></div>
+    <div id = 'us_new_deaths'></div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
     <script type="text/javascript" src="static/js/covid_logic.js"></script>
