edited us cases for conciseness, added chartjs code placehold

--- a/covid_data/index.html
+++ b/covid_data/index.html
@@ -12,7 +12,10 @@
     <div id = 'us_new_cases'></div>
     <div id = 'us_new_deaths'></div>
 
+    <canvas id="us_cases_chart"></canvas>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script type="text/javascript" src="static/js/covid_logic.js"></script>
     
 </body>
