--- a/covid_data/index.html
+++ b/covid_data/index.html
@@ -14,9 +14,11 @@
 
     <canvas id="us_cases_chart"></canvas>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script> -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script type="text/javascript" src="static/js/covid_logic.js"></script>
+    <!-- <script type="text/javascript" src="static/js/us_covid_logic.js"></script> -->
+    <script type="text/javascript" src="static/js/state_covid_logic.js"></script>
     
 </body>
 </html>
