--- a/covid_data/index.html
+++ b/covid_data/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- luxon for time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js"
         integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw=="
         crossorigin="anonymous"></script>
+
+    <!-- jquery & jquery-sparklines for sparklines -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
@@ -21,10 +25,18 @@
 
     <canvas id="us_cases_chart"></canvas>
 
+    <!-- d3 v6 -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
+
+    <!-- chart.js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <!-- <script type="text/javascript" src="static/js/us_covid_logic.js"></script> -->
-    <script type="text/javascript" src="static/js/state_covid_logic.js"></script>
+
+    <!-- math.js -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.2.0/math.min.js"></script>
+
+    <!-- logics -->
+    <script type="text/javascript" src="static/js/us_covid_logic.js"></script>
+    <!-- <script type="text/javascript" src="static/js/state_covid_logic.js"></script> -->
     
 </body>
 </html>
