smoothed out sparklines, misc. edits

--- a/covid_data/index.html
+++ b/covid_data/index.html
@@ -36,7 +36,7 @@
 
     <!-- logics -->
     <script type="text/javascript" src="static/js/us_covid_logic.js"></script>
-    <!-- <script type="text/javascript" src="static/js/state_covid_logic.js"></script> -->
+    <script type="text/javascript" src="static/js/state_covid_logic.js"></script>
     
 </body>
 </html>
